Bug 190755. Backspace sometimes crashing find as you type. r=timeless, sr=jst, a=dbaron